Update note in Jupyter file

--- a/adaptReadySamit.ipynb
+++ b/adaptReadySamit.ipynb
@@ -7,7 +7,9 @@
     "        Note:\n",
     "                Before running the notebook download and extract the complaints.csv zip file, the link for downloading zip file given in the 'docs file' and then read the file in this notebook\n",
     "                You can see the numbers on all graph plots just by hovering over it\n",
-    "                Please ignore the dependencies error like ValueError\n"
+    "                Please ignore the dependencies error like ValueError\n",
+    "\n",
+    "                The output of 4th Question will be exported or you can get from servlet_data.csv\n"
    ]
   },
   {
